wsl/research_kg/logs/eval_row1_v3_withinlang.log
  File "/home/admin_wsl/research_kg/eval_dbp5l.py", line 362
    save_data = {
                ^
SyntaxError: '{' was never closed
